--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.43.2",
+    "bcryptjs": "^2.4.3",
     "expo": "~51.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
