--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@supabase/supabase-js": "^2.43.2",
     "bcryptjs": "^2.4.3",
     "expo": "~51.0.7",
+    "expo-crypto": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^3.31.1",
     "supabase": "^1.167.4"
   },
   "devDependencies": {
