--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
-    "supabase": "^1.167.4"
+    "supabase": "^1.167.4",
+    "expo-secure-store": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
