--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.43.2",
     "bcryptjs": "^2.4.3",
     "expo": "~51.0.8",
     "expo-crypto": "^13.0.2",
+    "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
-    "supabase": "^1.167.4",
-    "expo-secure-store": "~13.0.1"
+    "supabase": "^1.167.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
