added actions correctly

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "actions2"]
 	path = actions2
 	url = https://github.com/Maximo-Rulli/actions-test
+[submodule "actions"]
+	path = actions
+	url = https://github.com/Maximo-Rulli/changas-actions
