--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0",
     "supabase": "^1.167.4"
   },
   "devDependencies": {
