--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@pusher/pusher-websocket-react-native": "^1.3.1",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -19,6 +19,7 @@
     "expo-crypto": "^13.0.2",
     "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
