--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "supabase": "^1.167.4",
-    "react-native-safe-area-context": "4.10.1"
+    "react-native-safe-area-context": "4.10.1",
+    "expo-system-ui": "~3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
