fixed adaptive icon code

--- a/app.json
+++ b/app.json
@@ -16,8 +16,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#10A045"
       },
       "package": "com.changas.changasmobile"
     },
