--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
-    "supabase": "^1.167.4"
+    "supabase": "^1.167.4",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
