--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -26,12 +27,12 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
-    "supabase": "^1.167.4",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "supabase": "^1.167.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
