--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
-    "supabase": "^1.167.4"
+    "supabase": "^1.167.4",
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
